refactor(constant/.) :  constant 패키지의 하위 패키지-클패스파일 관계를 클래스-내부클래스 로 변경